// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render AddComment correctly renders the AddComment snapshot correctly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <main
        class="main-section"
      >
        <div
          class="modal"
          style="display: none;"
        >
          <div
            class="modal-content"
          >
            <span
              class="close"
            >
              ×
            </span>
            <h3
              class="add-comment-heading "
            >
              Add your Comment
            </h3>
            <form
              class="margin-30"
            >
              <label
                for="name"
              >
                Name
              </label>
              <br />
              <input
                class="input-field"
                id="name"
                name="name"
                type="text"
                value=""
              />
              <br />
              <label
                for="message"
              >
                Message
              </label>
              <br />
              <textarea
                class="input-field"
                cols="50"
                id="message"
                name="message"
                rows="4"
              />
               
              <br />
              <div
                class="button-container"
              >
                <button
                  class="add-comment-button pad-10"
                >
                  Add Comment
                </button>
              </div>
            </form>
          </div>
        </div>
      </main>
    </div>
  </body>,
  "container": <div>
    <main
      class="main-section"
    >
      <div
        class="modal"
        style="display: none;"
      >
        <div
          class="modal-content"
        >
          <span
            class="close"
          >
            ×
          </span>
          <h3
            class="add-comment-heading "
          >
            Add your Comment
          </h3>
          <form
            class="margin-30"
          >
            <label
              for="name"
            >
              Name
            </label>
            <br />
            <input
              class="input-field"
              id="name"
              name="name"
              type="text"
              value=""
            />
            <br />
            <label
              for="message"
            >
              Message
            </label>
            <br />
            <textarea
              class="input-field"
              cols="50"
              id="message"
              name="message"
              rows="4"
            />
             
            <br />
            <div
              class="button-container"
            >
              <button
                class="add-comment-button pad-10"
              >
                Add Comment
              </button>
            </div>
          </form>
        </div>
      </div>
    </main>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`render AddComment correctly renders the AddComment snapshot correctly when modal is displayed 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <main
        class="main-section"
      >
        <div
          class="modal"
          style="display: block;"
        >
          <div
            class="modal-content"
          >
            <span
              class="close"
            >
              ×
            </span>
            <h3
              class="add-comment-heading "
            >
              Add your Comment
            </h3>
            <form
              class="margin-30"
            >
              <label
                for="name"
              >
                Name
              </label>
              <br />
              <input
                class="input-field"
                id="name"
                name="name"
                type="text"
                value=""
              />
              <br />
              <label
                for="message"
              >
                Message
              </label>
              <br />
              <textarea
                class="input-field"
                cols="50"
                id="message"
                name="message"
                rows="4"
              />
               
              <br />
              <div
                class="button-container"
              >
                <button
                  class="add-comment-button pad-10"
                >
                  Add Comment
                </button>
              </div>
            </form>
          </div>
        </div>
      </main>
    </div>
  </body>,
  "container": <div>
    <main
      class="main-section"
    >
      <div
        class="modal"
        style="display: block;"
      >
        <div
          class="modal-content"
        >
          <span
            class="close"
          >
            ×
          </span>
          <h3
            class="add-comment-heading "
          >
            Add your Comment
          </h3>
          <form
            class="margin-30"
          >
            <label
              for="name"
            >
              Name
            </label>
            <br />
            <input
              class="input-field"
              id="name"
              name="name"
              type="text"
              value=""
            />
            <br />
            <label
              for="message"
            >
              Message
            </label>
            <br />
            <textarea
              class="input-field"
              cols="50"
              id="message"
              name="message"
              rows="4"
            />
             
            <br />
            <div
              class="button-container"
            >
              <button
                class="add-comment-button pad-10"
              >
                Add Comment
              </button>
            </div>
          </form>
        </div>
      </div>
    </main>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
